--- a/.classpath
+++ b/.classpath
@@ -1,10 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
+	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-11">
 		<attributes>
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="src" path="src"/>
+	<classpathentry kind="lib" path="D:/JavaDeveloper/Java/PMD_Jars/net.sourceforge.pmd.eclipse.plugin_3.2.6.v200903300643.jar"/>
+	<classpathentry kind="lib" path="D:/JavaDeveloper/Java/PMD_Jars/net.sourceforge.pmd.eclipse.plugin_4.0.7.v20150522-1709.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
